# IASYS_Project

./: .gitignore  README.md
computer_vision/: package.xml  setup.py
computer_vision/computer_vision/: camera_sensor.py  yolo.py  yolo_action.py
gazebo_nodes/: CMakeLists.txt  package.xml
gazebo_nodes/worlds/: Autoestrada.world
iasys_scenarios/: CMakeLists.txt  package.xml
iasys_scenarios/iasys_scenarios/: __init__.py
iasys_scenarios/launch/: scenario_roadblock_vehicle.launch.py  spawn_prius.py
prius_description/: CMakeLists.txt  package.xml
prius_description/urdf/: prius.urdf
yolo_messages/: CMakeLists.txt  package.xml
yolo_messages/action/: YoloAction.action
